--- a/homenaje.html
+++ b/homenaje.html
@@ -17,7 +17,7 @@
   </head>
   <body>
       <nav>
-        <a class="nav-options " href="index-museo.html"><span class="titulo fs-4">Museo de Malvinas Maipu </span></a>
+        <a class="nav-options " href="index.html"><span class="titulo fs-4">Museo de Malvinas Maipu </span></a>
         <a class="nav-options" href="entrevistas-video.html">Entrevistas</a>
         <a class="nav-options" href="museo-virtual-v2.html">Museo Virtual</a>
         <a class="nav-options" href="galeria.html">Galeria</a>
