--- a/infantil.html
+++ b/infantil.html
@@ -25,7 +25,7 @@
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
         <div class="super">
         <nav>
-            <a class="nav-options " href="index-museo.html"><span class="titulo fs-4">Museo de Malvinas Maipu </span></a>
+            <a class="nav-options " href="index.html"><span class="titulo fs-4">Museo de Malvinas Maipu </span></a>
             <a class="nav-options" href="entrevistas-video.html">Entrevistas</a>
             <a class="nav-options" href="museo-virtual-v2.html">Museo Virtual</a>
             <a class="nav-options" href="galeria.html">Galeria</a>
