--- a/museo-virtual-v2.html
+++ b/museo-virtual-v2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Museo Virtual | Dani</title>
+    <title> Museo Virtual </title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album-rtl/">
 
@@ -16,7 +16,7 @@
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
         <nav>
-          <a class="nav-options " href="index-museo.html"><span class="titulo fs-4">Museo de Malvinas Maipu </span></a>
+          <a class="nav-options " href="index.html"><span class="titulo fs-4">Museo de Malvinas Maipu </span></a>
           <a class="nav-options" href="entrevistas-video.html">Entrevistas</a>
           <a class="nav-options" href="museo-virtual-V2.html">Museo Virtual</a>
           <a class="nav-options" href="galeria.html">Galeria</a>
