--- a/museo-virtual-v2.html
+++ b/museo-virtual-v2.html
@@ -99,7 +99,7 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img class="bd-placeholder-img card-img-top" width="100%" height="100%" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"src="img/Museo/fotosedit/chaleco.jpeg">
+                  <img class="bd-placeholder-img card-img-top" width="100%" height="100%" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"src="img/Museo/chaleco.jpeg">
       
                   <div class="card-body">
                     <p class="nombre-ap">Chaleco salvavidas</p>
