--- a/galeria.html
+++ b/galeria.html
@@ -373,7 +373,7 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img class="bd-placeholder-img card-img-top" width="100%" height="100%" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"src="Galeria/bROADSWORD1.jpg">
+                  <img class="bd-placeholder-img card-img-top" width="100%" height="100%" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"src="Galeria/Broadsword1.jpg">
       
                   <div class="card-body">
                     <p class="card-text">HMS Broadsword, con huellas de DEFA de 30mm.</p>
