--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Museo Malvinas | Dani</title>
+    <title> Museo Malvinas</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album-rtl/">
 
