--- a/homenaje.html
+++ b/homenaje.html
@@ -57,7 +57,7 @@
         <p>And lastly this, the third column of representative placeholder content.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="220" height="220" src="img/Homenaje/danielcarreras.png">
+        <img class="bd-placeholder-img rounded-circle" width="220" height="220" src="img/Homenaje/danielcarreras.jpeg">
 
         <h2><br>Carreras, Victor Daniel</h2>
         <p class="nombre-ap">	Armada | Cabo Segundo</p>
@@ -184,7 +184,7 @@
     <img class="bd-placeholder-img rounded-circle" width="220" height="220" src="img/Homenaje/carloshudson.jpg">
 
     <h2><br>Hudson, Carlos Alejandro</h2>
-    <p class="nombre-ap">Ejército |	"Cabo Primero"</p>
+    <p class="nombre-ap">Ejército |	Ejército</p>
     <p>And lastly this, the third column of representative placeholder content.</p>
     <button onclick="window.location.href='entrevistas-video.html';" type="button" class="btn btn-success">Entrevista</button>
   </div><!-- /.col-lg-4 -->
