--- a/homenaje.html
+++ b/homenaje.html
@@ -184,7 +184,7 @@
     <img class="bd-placeholder-img rounded-circle" width="220" height="220" src="img/Homenaje/carloshudson.jpg">
 
     <h2><br>Hudson, Carlos Alejandro</h2>
-    <p class="nombre-ap">Ejército |	Ejército</p>
+    <p class="nombre-ap">Ejército |	Sargento</p>
     <p>And lastly this, the third column of representative placeholder content.</p>
     <button onclick="window.location.href='entrevistas-video.html';" type="button" class="btn btn-success">Entrevista</button>
   </div><!-- /.col-lg-4 -->
