--- a/entrevista-escrita2.html
+++ b/entrevista-escrita2.html
@@ -33,7 +33,7 @@
     <div class="p-4 p-md-5 mb-4 rounded bg-success bg-opacity-25">
         <div class="col-md-6 px-0">
           <h1 class="display-4 fst-italic">Entrevista a Carlos, Hudson</h1>
-          <p class="lead my-3"><h5> </h5></p>
+          <p class="lead my-3"><h5> Ejército | Sargento</h5></p>
         </div>
       </div>
     <div class="p-4 p-md-5 mb-4 rounded bg-success bg-opacity-25">
