--- a/museo-virtual-v2.html
+++ b/museo-virtual-v2.html
@@ -89,7 +89,7 @@
       
                   <div class="card-body">
                     <p class="nombre-ap">Cantimplora</p>
-                    <p class="card-text">Recipiente para llevar bebida.<br><br>Gentileza: Carlos, Hudson. Veterano de Malvinas.</p>
+                    <p class="card-text">Gentileza: Carlos, Hudson. Veterano de Malvinas.</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                       </div>
